# H264Decode

./: build.gradle  readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/meishe/h264decode/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Codec.cpp  Codec.h  H264Decoder.cpp  H264Decoder.h  H264_decoder.cpp  H264_decoder.h  JniTool.c  JniTool.h  native-lib.cpp  safe_queue.c  safe_queue.h  x264_encode.c  x264_encode.h
app/src/main/cpp/include/: ffmpeg_log.h
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/cpp/include/libavutil/: error.h
app/src/main/cpp/libx264/: x264.h
app/src/main/java/com/meishe/h264decode/: DecodeEngine.java  FileUtils.java  H264DecoderActivity.java  H264EncodeActivity.java  MainActivity.java  X264Encode.java  YUVFormat.java
app/src/main/res/layout/: activity_h264_encode.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/meishe/h264decode/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
